--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "prettier": "prettier",
     "// - APPS": "Run Apps in dev and with packaged modules",
     "start": "ng serve --aot --open",
-    "serve:integration": "ng serve --prod --project integration #requires yarn package",
+    "serve:integration": "ng serve --open --project integration #requires yarn package",
     "serve:hmr:integration": "npm start -- --project integration --configuration hmr",
     "// - BUILDING": "Run Apps in dev and with packaged modules",
     "build": "yarn build:packages && ts-node tools/set-metadata",
