--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "build:integration:ssr": "ng run integration:build:production && ng run integration:server:production #requires yarn build",
     "// - TESTING": "Test all modules",
     "test": "ng test",
+    "test:types": "dtslint packages/store/types",
     "test:integration": "ng run integration:test #requires yarn build",
     "test:integration:ssr": "ng run integration:test #requires yarn build",
     "test:ssr:server": "cd integration && ts-node server.ts",
@@ -118,6 +119,7 @@
     "core-js": "^2.6.0",
     "cross-env": "^5.2.0",
     "express": "^4.15.2",
+    "dtslint": "^0.6.1",
     "fs-extra": "^7.0.1",
     "husky": "^1.1.0",
     "jasmine-core": "^3.4.0",
